--- a/about.qmd
+++ b/about.qmd
@@ -1,19 +1,23 @@
 ---
 title: "About"
-image: profile.jpg
+image: posts/images/port.png
 about:
   template: jolla
   links:
     - icon: twitter
       text: Twitter
-      href: https://twitter.com
+      href: https://twitter.com/kagglingdieter
     - icon: linkedin
       text: LinkedIn
       href: https://linkedin.com
     - icon: github
       text: Github
-      href: https://github.com
+      href: https://github.com/christofhenkel
 
 ---
 
-About this blog
+Hello, I'm Christof Henkel!
+
+I'm a deep learning researcher at NVIDIA. I'm particularly interested in novel deep learning architectures with respect to graphs, computer vision and audio. I have a background in probability theory and specialized in stochastic processes about which I did a PhD at the Ludwig-Maximilians-Univerity in Munich. I started kaggling 5 years ago and after participating in more than 50 competitions currently hold the 1st rank in the worl-wide competition ranking. 
+
+Get in touch with me on Twitter ([@kagglingdieter](https://twitter.com/kagglingdieter)) or contact me via my [kaggle profile](https://kaggle.com/christofhenkel)
