--- a/posts/2022-09-07-chapter-2.md
+++ b/posts/2022-09-07-chapter-2.md
@@ -6,6 +6,7 @@ categories: [kaggle]
 title: Becoming world's 1st - My first gold medal
 image: images/thumb_chap2.png
 comments: false
+date: "2022-09-07"
 ---
 
 ## The first silver medals
