--- a/posts/2022-11-20-chapter-3.md
+++ b/posts/2022-11-20-chapter-3.md
@@ -4,8 +4,9 @@ layout: post
 description: What does it take to become world's number one in competitive machine learning? Becoming competitions grandmaster is part of it. 
 categories: [kaggle]
 title: Becoming world's 1st - Achieving competitions grandmaster
-image: images/thumb_chap2.png
+image: images/bengali_thumb.png
 comments: false
+date: "2022-11-20"
 ---
 
 ## Gathering experience inside and outside of kaggle
@@ -42,12 +43,12 @@ As such, I chose the Bengali.AI Handwritten Grapheme Classification challenge wh
 
 Besides addressing interesting data properties such as class imbalance and high intra-class variability, understanding Bengali writing, characterized by a lot of exceptions and special cases, gave significant advantage in this competition. So, I started with setting up a solid baseline mode. Interestingly you can either classify root, vowel and consonant diacritics separately or predict the grapheme as a whole and derive root, vowel and consonant from that. 
 
-![]({{site.baseurl}}/images/bengali_grapheme.png)
+![](images/bengali_grapheme.png)
 
 You can see an overview of the model architecture here:
 
 
-![]({{site.baseurl}}/images/bengali_model.png)
+![](images/bengali_model.png)
 
 
 The figure reads left to right. The input are original sized images at 137x236 resolution which are fed to a SeResNext50 which was pretrained on ImageNet. The features are then pooled and fed into a few fully connected layers before predicting root, vowel and consonant seperatly in the main head, and the grapheme as a whole in an auxiliary head. After tuning hyperparameters a bit, that model already put me at a good silver rank on the public leaderboard.
@@ -61,7 +62,7 @@ That trick helped me to push my leaderboard score significantly and I finished 5
 
 
 
-![]({{site.baseurl}}/images/bengali_lb.png)
+![](images/bengali_lb.png)
 
 
 Overall, I think the experience and knowledge gained in the previous year in a dozen competitions enabled me to be very efficient in terms of code and modeling. Hence, I could spend time on researching the domain of Bengali writing, which was one of the competition specific challenges. The won solo gold medal resulted in Kaggle competitions grandmaster status, a title currently only 240 people hold world wide and one of my biggest achievements so far.
