--- a/posts/2022-07-05-chapter-1.qmd
+++ b/posts/2022-07-05-chapter-1.qmd
@@ -5,6 +5,7 @@ description: What does it take to become world's number one in competitive machi
 categories: [kaggle]
 title: Becoming world's 1st - My first kaggle competition
 image: images/tf_speech_thumbnail.png
+date: "2022-07-05"
 comments: false
 ---
 
