--- a/posts/2022-09-07-chapter-2.md
+++ b/posts/2022-09-07-chapter-2.md
@@ -37,7 +37,7 @@ I also saw some nice synergy effects with my daily job, where I could apply some
 2019 started with a very challenging and hence exciting competition: Human Protein Atlas Image Classification, where Kagglers were challenged to classify subcellular protein patterns in human cells. Not only data properties like the multi-class prediction with high class imbalance, lots of near duplicate images and external available data, but also the strong scientific domain working with four-channel immunofluorescence images made the competition quite exciting. Although the channels are separate gray images in their raw form, as soon as you combine them it creates a beautiful luminous and mesmerizing rgby image. 
 
 
-![hpa](images/thumb_chap2.png){:height="50%" width="50%"}
+![](images/thumb_chap2.png){width=50%}
 
 
 Now, the competition task was to classify the proteins, which have been marked by the green color. 
