--- a/posts/2022-11-20-chapter-3.md
+++ b/posts/2022-11-20-chapter-3.md
@@ -17,9 +17,9 @@ Having a long term oriented mindset I focused on building reusable baselines and
 
 I was lucky to achieve a few more gold medals this way, and started to create a strong reputation shining with outside the box solutions. 
 
-Probably this reputation helped to join forces with two guys shocking the Kaggle community with top placements in competition after competition - The Zoo, consisting of Philipp and Dimitry. We teamed for the IEEE-CIS Fraud Detection challenge, where the task was to detect fraudulent customer transactions. Although the competition itself was not too exciting, working within a highly dedicated and communicative team was a real pleasure, setting the foundation for future collaborations. In the end, our team finished 6th out of over six thousand teams, which was the sixth gold medal within a year, a quantity that was unimaginable for me when starting my kaggle journey. 
+Probably this reputation helped to join forces with two guys shocking the Kaggle community with top placements in competition after competition - The Zoo, consisting of [Philipp](https://www.kaggle.com/philippsinger) and [Dimitry](https://www.kaggle.com/dott1718). We teamed for the [IEEE-CIS Fraud Detection challenge](https://www.kaggle.com/competitions/ieee-fraud-detection), where the task was to detect fraudulent customer transactions. Although the competition itself was not too exciting, working within a highly dedicated and communicative team was a real pleasure, setting the foundation for future collaborations. In the end, our team finished 6th out of over six thousand teams, which was the sixth gold medal within a year, a quantity that was unimaginable for me when starting my kaggle journey. 
 
-At that time, I would have considered myself decently skilled in deep learning but not as one of the best within the Kaggle community. However, compared to people I had contact with in my daily job with a data science team at an insurance company, I was on a different planet. With local clients neither appreciating nor believing in the capabilities of deep learning I was frustrated with the lack of challenging problems, and consequently quit that job. Instead, together with two friends and kagglers I knew from my PhD time, I founded khumbu.ai, a start-up providing state of the art deep learning based solutions. We were lucky to work with some local and international clients on interesting and challenging projects such as automated risk assessment, text-to-speech and document understanding.
+At that time, I would have considered myself decently skilled in deep learning but not as one of the best within the Kaggle community. However, compared to people I had contact with in my daily job with a data science team at an insurance company, I was on a different planet. With local clients neither appreciating nor believing in the capabilities of deep learning I was frustrated with the lack of challenging problems, and consequently quit that job. Instead, together with two friends and kagglers I knew from my PhD time, I founded [khumbu.ai](https://www.khumbu.ai/company), a start-up providing state of the art deep learning based solutions. We were lucky to work with some local and international clients on interesting and challenging projects such as automated risk assessment, text-to-speech and document understanding.
 
 Although running a start-up was more work, it yet enabled me to distribute my time more flexibly. Also the synergy between work projects and kaggle competitions improved significantly, enabling to apply knowledge gained at kaggle to client’s problems and vice versa. 
 
@@ -37,13 +37,15 @@ Now, while the motivation aspect should not be an issue when finally aiming for 
 
 Additionally, depending on your personality, working weeks for a single goal creates a certain pressure. Even more since you compete in isolation for a goal which is of an all-or-nothing type. If you miss the gold medal by just a few places all was for nothing. (Of course it's not completely for nothing as you have learned a few things at least, but it still feels like it). Hence its important to choose a suited competition when going for grandmaster. It should not only be interesting enough to provide fun during weeks of working alone, but also be challenging enough to leave room for unique ideas, separating you from others.
 
-As such, I chose the Bengali.AI Handwritten Grapheme Classification challenge where competitors were asked to classify the components of handwritten Bengali. Thereby, three constituent elements have to be classified in each grapheme image: grapheme root, vowel diacritics, and consonant diacritics. I illustrate an exemplary grapheme which would be pronounced “pro” in english and consists of root "p", consonant diacritic "r" and vowel diacritic "o".
+As such, I chose the [Bengali.AI Handwritten Grapheme Classification challenge](https://www.kaggle.com/c/bengaliai-cv19) where competitors were asked to classify the components of handwritten Bengali. Thereby, three constituent elements have to be classified in each grapheme image: grapheme root, vowel diacritics, and consonant diacritics. I illustrate an exemplary grapheme which would be pronounced “pro” in english and consists of root "p", consonant diacritic "r" and vowel diacritic "o".
 
+<p align="center" width="100%">
+    <img width="50%" src="images/bengali_grapheme.png"> 
+</p>
 
 
 Besides addressing interesting data properties such as class imbalance and high intra-class variability, understanding Bengali writing, characterized by a lot of exceptions and special cases, gave significant advantage in this competition. So, I started with setting up a solid baseline mode. Interestingly you can either classify root, vowel and consonant diacritics separately or predict the grapheme as a whole and derive root, vowel and consonant from that. 
 
-![](images/bengali_grapheme.png)
 
 You can see an overview of the model architecture here:
 
@@ -56,7 +58,7 @@ The figure reads left to right. The input are original sized images at 137x236 r
 After that I dedicated a lot of time to research the rules and special cases of Bengali writing and gained a lot of domain knowledge. In parallel, I examined my models predictions to see which classes were explicitly bad, and found the key to perform well in this competition: 
 A further representation of one of the vowel diacritics was not present in the training data, although being present in the test data. 
 
-Interestingly, and typical for Kaggle, top solutions addressed this issue differently, each in their own creative way. While some used Bengali  ttf-fonts, the winning team used GANs to artificially generate images containing the missing representation. I used a completely different approach, as I learned through all my domain research that  the missing representation is a mix of two available classes. I re-designed the training labels to a more granular level, which enabled the prediction of the missing mixed class. 
+Interestingly, and typical for Kaggle, top solutions addressed this issue differently, each in their own creative way. While some used Bengali  ttf-fonts, the winning team used GANs to artificially generate images containing the missing representation. I used a completely different approach, as I learned through all my domain research that the missing representation is a mix of two available classes. I re-designed the training labels to a more granular level, which enabled the prediction of the missing mixed class. 
 
 That trick helped me to push my leaderboard score significantly and I finished 5th place out of over 2000 teams at the end. 
 
