--- a/posts/2022-11-20-chapter-3.md
+++ b/posts/2022-11-20-chapter-3.md
@@ -6,6 +6,9 @@ categories: [kaggle]
 title: Becoming world's 1st - Achieving competitions grandmaster
 image: images/bengali_thumb.png
 date: "2022-11-20"
+open-graph: true
+twitter-card: 
+  site: "@sitehandle"
 ---
 
 ## Gathering experience inside and outside of kaggle
