--- a/posts/2022-11-20-chapter-3.qmd
+++ b/posts/2022-11-20-chapter-3.qmd
@@ -6,9 +6,8 @@ categories: [kaggle]
 title: Becoming world's 1st - Achieving competitions grandmaster
 image: images/bengali_thumb.png
 date: "2022-11-20"
-open-graph: true
 twitter-card: 
-  site: "@sitehandle"
+  site: "@kagglingdieter"
 ---
 
 ## Gathering experience inside and outside of kaggle
